styles/components/footer.scss
.footer {
  $footer-sm-device: 620;
  background-color: $text-clr-primary;
  color: $text-clr-sec;
  padding: 8rem 0 4rem;
  @include responsive($ipad) {
    padding: 4rem 0 2rem;
  }
  &__wrapper {
    &:first-child {
      margin-bottom: 5rem;
      @include responsive($footer-sm-device){
        margin-bottom: 0;
      }
    }
    &:last-child {
      align-items: center;
    }
    display: flex;
    justify-content: space-between;
    @include responsive($footer-sm-device) {
      align-items: flex-start;
      flex-wrap: wrap;
      .footer__nav__wrap {
        width: calc(50% - 2rem);
        margin-bottom: 2rem;
      }
      .footer-meta-desc {
        width: 100%;
      }
    }
    p,.nav__link,.footer__addr-txt {
      font-size: 1.4rem;
      line-height: 2rem;
      color: $text-clr-sec;
      font-weight: 400;
    }
    .footer__nav__wrap {
      &:not(:last-child) {
        margin-right: 2rem;
        @include responsive($footer-sm-device) {
          margin-right: 0;
        }
      }
      .nav__wrapper {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        .nav__link:not(:last-child) {
          margin-bottom: 1rem;
          @include responsive($mob) {
            margin-bottom: 0.6rem;
          }
        }
      }
    }
    .footer-meta-desc {
      p {
        max-width: 500px;
        @include responsive($ipad) {
          max-width: 300px;
          max-height: 8rem;
          overflow: hidden;
        }
        @include responsive($footer-sm-device) {
          max-width: 100%;
        }
      }
    }

    &__title {
      display: inline-block;
      margin-bottom: 1.5rem;
      font-weight: 700;
      font-size: 1.4rem;
      line-height: 2rem;
      text-transform: uppercase;
    }
  }
}

